fix animation flickering

--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ a.button img {
 h1,
 p {
   color: white;
-  width: calc(var(--column) - 4rem);
+  width: calc(var(--column) - 3rem);
   border: var(--border-size) solid white;
   padding: 2rem;
   border-radius: var(--border-radius);
@@ -155,6 +155,8 @@ a.button span {
   align-items: center;
   right: 0;
   animation: colorful 10s linear infinite;
+  background: url("assets/color1.jpg"), url("assets/color2.jpg"),
+    url("assets/color3.jpg"), url("assets/color4.jpg");
 }
 
 #face {
@@ -167,23 +169,33 @@ a.button span {
 
 @keyframes colorful {
   0% {
-    background: url("assets/mask.svg"), url("assets/color1.jpg");
+    background: url("assets/mask.svg"), url("assets/color1.jpg"),
+      url("assets/color2.jpg"), url("assets/color3.jpg"),
+      url("assets/color4.jpg");
     background-size: cover;
   }
   25% {
-    background: url("assets/mask.svg"), url("assets/color2.jpg");
+    background: url("assets/mask.svg"), url("assets/color2.jpg"),
+      url("assets/color1.jpg"), url("assets/color3.jpg"),
+      url("assets/color4.jpg");
     background-size: cover;
   }
   50% {
-    background: url("assets/mask.svg"), url("assets/color3.jpg");
+    background: url("assets/mask.svg"), url("assets/color3.jpg"),
+      url("assets/color2.jpg"), url("assets/color1.jpg"),
+      url("assets/color4.jpg");
     background-size: cover;
   }
   75% {
-    background: url("assets/mask.svg"), url("assets/color4.jpg");
+    background: url("assets/mask.svg"), url("assets/color4.jpg"),
+      url("assets/color2.jpg"), url("assets/color1.jpg"),
+      url("assets/color3.jpg");
     background-size: cover;
   }
   100% {
-    background: url("assets/mask.svg"), url("assets/color1.jpg");
+    background: url("assets/mask.svg"), url("assets/color1.jpg"),
+      url("assets/color2.jpg"), url("assets/color3.jpg"),
+      url("assets/color4.jpg");
     background-size: cover;
   }
 }
